--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,6 +59,7 @@
                                             <button id="warning-jump-button" type="button" class="btn btn-xs btn-warning jump-button" disabled>Warning</button>
                                             <button id="scanner-jump-button" type="button" class="btn btn-xs btn-success jump-button" disabled>Scanner</button>
                                             <button id="parser-jump-button" type="button" class="btn btn-xs btn-success jump-button" disabled>Parser</button>
+                                            <button id="semantic-analyzer-jump-button" type="button" class="btn btn-xs btn-success jump-button" disabled>Semantic Analyzer</button>
                                         </span>
                                     </span>
                                 </div>
@@ -75,50 +76,55 @@
                     </div>
 
                     <div class="row">                        
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <div class="col-xs-12">
-                                    <h6 class="panel-title">Symbol Table</h6>
+                        <ul class="nav nav-tabs nav-justified">
+                            <li class="active"><a href="#symbol-tree-display" data-toggle="tab"><strong>Symbol Tree</strong></a></li>
+                            <li><a href="#symbol-table-display" data-toggle="tab"><strong>Symbol Table</strong></a></li>                            
+                        </ul>
+                        <div id="symbol-display-container" class="panel panel-default">
+                            <div class="tab-content">
+                                <div class="tab-pane fade" id="symbol-table-display">
+                                    <table class="table table-hover table-condensed panel-body">
+                                        <thead>
+                                            <tr class="success">
+                                                <th class='text-center'>Scope</th>
+                                                <th class='text-center'>Line Declared</th>
+                                                <th class='text-center'>Name</th>
+                                                <th class='text-center'>Type</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr><td class="lead text-center" colspan="4">No symbols</td></tr>
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </div>
-
-                            <div id="symbol-table-display">
-                                <table class="table table-hover table-condensed panel-body">
-                                    <thead>
-                                        <tr class="success">
-                                            <th class='text-center'>Scope</th>
-                                            <th class='text-center'>Line Declared</th>
-                                            <th class='text-center'>Name</th>
-                                            <th class='text-center'>Type</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr><td class="lead text-center" colspan="4">No symbols</td></tr>
-                                    </tbody>
-                                </table>
+                                <div class="tab-pane fade active in" id="symbol-tree-display">
+                                    <h6 class="lead text-center">No symbol tree</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>               
+                </div>     
             </div>
 
             <div class="row">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <div class="col-xs-12">
-                            <h6 class="panel-title">Concrete Syntax Tree</h6>
+                <ul id="myTab" class="nav nav-tabs nav-justified">
+                    <li class="active"><a href="#concreteSyntaxTree" data-toggle="tab"><strong>Concrete Syntax Tree</strong></a></li>
+                    <li><a href="#abstractSyntaxTree" data-toggle="tab"><strong>Abstract Syntax Tree</strong></a></li>
+                </ul>
+                <div id="tree-display-container" class="panel panel-default">
+                    <div id="tree-display" class="tab-content">
+                        <div class="tab-pane active fade in" id="concreteSyntaxTree">
+                            <h6 class="lead text-center">No concrete syntax tree</h6>
                         </div>
-                    </div>
-
-                    <div id="tree-display">
-                        <h6 class="lead text-center">No concrete syntax tree</h6>
+                        <div class="tab-pane fade" id="abstractSyntaxTree">
+                            <h6 class="lead text-center">No abstract syntax tree</h6>
+                        </div>
                     </div>
 
                     <div class="panel-footer">
                         <span id="token-stream" class="lead panel-title">No tokens</span>
                     </div>
                 </div>
-
             </div>
         </div>     
 
@@ -142,9 +148,11 @@
         <script src="assets/js/system/control.js"></script>
         <script src="assets/js/system/compiler/nonterminal.js"></script>
         <script src="assets/js/system/compiler/concrete-syntax-tree.js"></script>
+        <script src="assets/js/system/compiler/abstract-syntax-tree.js"></script>
         <script src="assets/js/system/compiler/symbol-table.js"></script>
         <script src="assets/js/system/compiler/token.js"></script>
         <script src="assets/js/system/compiler/scanner.js"></script>
-        <script src="assets/js/system/compiler/parser.js"></script>        
+        <script src="assets/js/system/compiler/parser.js"></script> 
+        <script src="assets/js/system/compiler/semantic-analyzer.js"></script> 
     </body>
 </html>
